--- a/app/views/questions/answer.html.erb
+++ b/app/views/questions/answer.html.erb
@@ -1,2 +1,5 @@
-<h1>Questions#answer</h1>
-<p>Find me in app/views/questions/answer.html.erb</p>
+<h1>Stupid Coaches</h1>
+<p><%= @question %></p>
+<p><%= @answer %></p>
+
+<p><%= link_to "Ask another question", ask_path %></p>
