added a bit of styling

--- a/app/views/questions/ask.html.erb
+++ b/app/views/questions/ask.html.erb
@@ -1,7 +1,13 @@
+<div class="container text-align-center">
 <h1>Stupid Coaches</h1>
 <p>What?</p>
 
-<form action="answer">
-  <input type="text" name="question">
-  <input type="submit" value="Ask!">
-</form>
+  <form action="answer" class="form">
+    <div class="search-form-control form-group">
+      <input type="text" name="question" class="form-control string required">
+      <button type="submit" value="Ask!" class="btn btn-flat">
+        <i class="fas fa-keyboard"></i> Search
+      </button>
+    </div>
+  </form>
+</div>
